@startuml
class ropa.Uniforme {
}
class ropa.Usuario {
+ void agregarSugerencia(Uniforme)
}
abstract class ropa.Institucion {
+ {abstract}Uniforme crearUniforme()
+ Prenda generarPrenda(TipoPrenda,TipoMaterial,Trama,Color,Color)
}
class ropa.ColegioSanJuan {
+ Uniforme crearUniforme()
}
class ropa.InstitutoJohnson {
+ Uniforme crearUniforme()
}
class ropa.Prenda {
- TipoPrenda tipo
}
class ropa.GeneradorDePrendas {
- TipoPrenda tipo
+ void setMaterialPrenda(MaterialConstruccion)
+ Prenda generarPrenda()
+ CategoriaPrenda identificarCategoria()
}
class ropa.MaterialConstruccion {
- TipoMaterial tipoMaterial
- Trama trama
- Color colorPrincipal
- Color colorSecundario
}

ropa.Institucion <|-- ropa.InstitutoJohnson
ropa.Institucion <|-- ropa.ColegioSanJuan
ropa.Prenda <-- ropa.Uniforme: prendaSuperior
ropa.Prenda <-- ropa.Uniforme: prendaInferior
ropa.Prenda <-- ropa.Uniforme: calzado
ropa.Uniforme "*" <-- ropa.Usuario: sugerencias
ropa.Uniforme <.. ropa.ColegioSanJuan
ropa.Uniforme <.. ropa.InstitutoJohnson
ropa.MaterialConstruccion <-- ropa.Prenda: materialConstruccion
ropa.MaterialConstruccion <-- ropa.GeneradorDePrendas: materialConstruccion

@enduml